Removed "-XX:MaxPermSize=256m" option to suppress the warning "OpenJDK 64-Bit Server VM warning: ignoring option MaxPermSize=256m; support was removed in 8.0" in build logs